--- a/md/天猫内容.md
+++ b/md/天猫内容.md
@@ -1,10 +1,10 @@
 #### 逛逛运营一年粉丝数变化
 
 <div style="display: flex;">
-  <img src="../img/fs1.jpg" width="50%" title="运营前"></img>
-  <img src="../img/fs2.jpg" width="50%" title="运营后"></img>
+  <img src="https://raw.gitmirror.com/lqingjin/zuopinji/main/img/fs1.jpg" width="50%" title="运营前"></img>
+  <img src="https://raw.gitmirror.com/lqingjin/zuopinji/main/img/fs2.jpg" width="50%" title="运营后"></img>
 </div>
 
 #### 双十一大促逛逛数据概况
 
-<img src="../img/双11.jpg"></img>
+<img src="https://raw.gitmirror.com/lqingjin/zuopinji/main/img/双11.jpg"></img>
