--- a/md/店铺活动.md
+++ b/md/店铺活动.md
@@ -5,45 +5,45 @@
 #### 活动板块
 
 <div style="display: flex;">
-  <img src="../img/sy1.jpg" width="50%"></img>
-  <img src="../img/sy2.jpg" width="50%"></img>
+  <img src="https://raw.gitmirror.com/lqingjin/zuopinji/main/img/sy1.jpg" width="50%"></img>
+  <img src="https://raw.gitmirror.com/lqingjin/zuopinji/main/img/sy2.jpg" width="50%"></img>
 </div>
 <br>
 
 #### 日常板块
 
 <div style="display: flex;">
-  <img src="../img/rc1.jpg" height="100%" width="50%"></img>
-  <img src="../img/rc2.jpg" width="50%"></img>
+  <img src="https://raw.gitmirror.com/lqingjin/zuopinji/main/img/rc1.jpg" height="100%" width="50%"></img>
+  <img src="https://raw.gitmirror.com/lqingjin/zuopinji/main/img/rc2.jpg" width="50%"></img>
 </div>
 <br>
 
 #### 导航板块
 
 <div style="display: flex;">
-  <img src="../img/dh1.jpg" width="50%"></img>
-  <img src="../img/dh2.jpg" width="50%"></img>
+  <img src="https://raw.gitmirror.com/lqingjin/zuopinji/main/img/dh1.jpg" width="50%"></img>
+  <img src="https://raw.gitmirror.com/lqingjin/zuopinji/main/img/dh2.jpg" width="50%"></img>
 </div>
 <br>
 
 #### 品牌宣传板块
 
 <div style="display: flex;">
-  <img src="../img/xc1.jpg" width="50%"></img>
-  <img src="../img/xc2.jpg" width="50%"></img>
+  <img src="https://raw.gitmirror.com/lqingjin/zuopinji/main/img/xc1.jpg" width="50%"></img>
+  <img src="https://raw.gitmirror.com/lqingjin/zuopinji/main/img/xc2.jpg" width="50%"></img>
 </div>
 
 #### PC端店铺首页
 
- <img src="../img/pc.jpg" width="100%"></img>
+ <img src="https://raw.gitmirror.com/lqingjin/zuopinji/main/img/pc.jpg" width="100%"></img>
 
 ## 关联页
 
 关联页放置于详情页之前，页面内容主要放店铺活动策略，以及主推爆款，便于买家打开详情页后直接了解，降低客户跳失率。
 
 <div style="display: flex;">
-  <img src="../img/gl1.jpg" width="50%"></img>
-  <img src="../img/gl2.jpg" width="50%"></img>
+  <img src="https://raw.gitmirror.com/lqingjin/zuopinji/main/img/gl1.jpg" width="50%"></img>
+  <img src="https://raw.gitmirror.com/lqingjin/zuopinji/main/img/gl2.jpg" width="50%"></img>
 </div>
 
 ## 活动主图
@@ -51,7 +51,7 @@
 主图是非常重要的一环，直接影响点击率、和转化率。主图的利益点通常要分层次，即较大的利益点放大突出显示，文案要精简易懂，有张力。
 
 <div style="display: flex;">
-  <img src="../img/zt1.jpg" width="30%"></img>
-  <img src="../img/zt2.jpg" width="35%"></img>
-  <img src="../img/zt3.jpg" width="30%"></img>
+  <img src="https://raw.gitmirror.com/lqingjin/zuopinji/main/img/zt1.jpg" width="30%"></img>
+  <img src="https://raw.gitmirror.com/lqingjin/zuopinji/main/img/zt2.jpg" width="35%"></img>
+  <img src="https://raw.gitmirror.com/lqingjin/zuopinji/main/img/zt3.jpg" width="30%"></img>
 </div>
