--- a/md/活动策划.md
+++ b/md/活动策划.md
@@ -22,7 +22,7 @@
 
 因此可以将主题拟定为此风格， 从现场布场到流程仪式再到视频配合，全部统一风格。并以电影式海报为主要布场物料，烘托出活动现场氛围的史诗感。
 
-![image](../img/0820_files/Image_001.jpg)
+![image](https://raw.gitmirror.com/lqingjin/zuopinji/main/img/0820_files/Image_001.jpg)
 
 &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;（主题海报风格参考）‌
 
@@ -44,7 +44,7 @@
 
 本次新品发布会整体风格要更加简约、时尚一些。风格贴近苹果发布会等科技产品的发布会。
 
-![image](../img/0820_files/Image_002.jpg)
+![image](https://raw.gitmirror.com/lqingjin/zuopinji/main/img/0820_files/Image_002.jpg)
 
 &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;（发布会风格参考）
 
@@ -70,7 +70,7 @@
 
 此部分为甲方提供启动大会流程总览， 后续将为每个环节提供详细的设计和建议。
 
-![image](../img/0820_files/img1.jpg)
+![image](https://raw.gitmirror.com/lqingjin/zuopinji/main/img/0820_files/img1.jpg)
 
 ### 2、启动大会｜流程细化‌
 
@@ -160,7 +160,7 @@
 
 此部分为暂定新品发布会流程， 有以下几个问题需要沟通解决。
 
-![image](../img/0820_files/img2.jpg)
+![image](https://raw.gitmirror.com/lqingjin/zuopinji/main/img/0820_files/img2.jpg)
 
 1. 时间问题：
 
@@ -188,7 +188,7 @@
 
 舞台上， 摆放新品发布会主题的字样的立牌代替严肃的讲台， 设计师和产品出现在大家面前， 开始正式介绍。
 
-![image](../img/0820_files/Image_003.jpg)
+![image](https://raw.gitmirror.com/lqingjin/zuopinji/main/img/0820_files/Image_003.jpg)
 
 &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;（发布会舞台参考）
 
@@ -208,7 +208,7 @@
 
    大门两边各放两个战鼓并配人负责击打、两位礼仪小姐负责迎宾、场外可放主题海报展架与异形展示物。
 
-   ![image](../img/0820_files/Image_004.jpg)
+   ![image](https://raw.gitmirror.com/lqingjin/zuopinji/main/img/0820_files/Image_004.jpg)
 
 &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;（异形展示物参考）
 
@@ -216,7 +216,7 @@
 
    1、签到背板： 以启动大会为主题的电影海报风格的签到背板。
 
-   ![image](../img/0820_files/Image_005.jpg)
+   ![image](https://raw.gitmirror.com/lqingjin/zuopinji/main/img/0820_files/Image_005.jpg)
 
 &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;（签到背板参考）
 
@@ -224,17 +224,17 @@
 
      
 
-   ![image](../img/0820_files/Image_006.jpg)
+   ![image](https://raw.gitmirror.com/lqingjin/zuopinji/main/img/0820_files/Image_006.jpg)
 
 &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;（留影墙参考）
 
-   ![image](../img/0820_files/Image_007.jpg)
+   ![image](https://raw.gitmirror.com/lqingjin/zuopinji/main/img/0820_files/Image_007.jpg)
 
 &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;（KT 版拍照参考）
 
    3、签到桌：签到桌可以做成以下形式，将文字换成报道处，整体风格模拟古代的征兵处。边上摆放立式战旗。
 
-   ![image](../img/0820_files/Image_008.jpg)
+   ![image](https://raw.gitmirror.com/lqingjin/zuopinji/main/img/0820_files/Image_008.jpg)
 
 &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;（签到桌布置参考）
 
@@ -246,7 +246,7 @@
 
    同时可以配合指引地贴（ 距离战场还有 50m 之类的字样）
 
-   ![image](../img/0820_files/Image_009.jpg)
+   ![image](https://raw.gitmirror.com/lqingjin/zuopinji/main/img/0820_files/Image_009.jpg)
 
 &emsp;&emsp;&emsp;（海报立牌参考）
 
@@ -254,7 +254,7 @@
 
 会议厅门口同样摆放两个战鼓， 用来烘托董事长入场的氛围。使用异形门头， 和海报立牌进行装饰。
 
-![image](../img/0820_files/Image_010.jpg)
+![image](https://raw.gitmirror.com/lqingjin/zuopinji/main/img/0820_files/Image_010.jpg)
 
 &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;（异形门头参考）
 
@@ -264,12 +264,12 @@
 
    舞台布置不宜太过花哨， 因此启动大会在签署军令状环节前， 舞台上只摆放有装饰花束和主题 KT 板的宣讲台。
 
-   ![image](../img/0820_files/Image_011.jpg)
+   ![image](https://raw.gitmirror.com/lqingjin/zuopinji/main/img/0820_files/Image_011.jpg)
 
 
 &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;（宣讲台参考）
 
-   ![image](../img/0820_files/Image_012.jpg)
+   ![image](https://raw.gitmirror.com/lqingjin/zuopinji/main/img/0820_files/Image_012.jpg)
 
 &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;（军令状环节道具布景参考）
 
@@ -278,7 +278,7 @@
    发布会的舞台应更简约、时尚， 因此用发布会立式广告字代替宣讲台， 摆放在舞台上。
 
 
-   ![image](../img/0820_files/Image_013.jpg)
+   ![image](https://raw.gitmirror.com/lqingjin/zuopinji/main/img/0820_files/Image_013.jpg)
 
 &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;（立式广告字参考）
 
@@ -288,7 +288,7 @@
 
      
 
-   ![image](../img/0820_files/Image_014.jpg)
+   ![image](https://raw.gitmirror.com/lqingjin/zuopinji/main/img/0820_files/Image_014.jpg)
 
 &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;（嘉宾席布景参考）
 
@@ -297,7 +297,7 @@
    观众席摆放成双十一的形状， 每个座位上放水、以及一个决战双十一定制纪念玩偶，给予每个参会员工，员工可带回工位摆放，持续提振士气。少量座位摆放战旗， 由特定员工入座， 可挥动战旗， 带动全场氛围。
 
      
-   ![image](../img/0820_files/Image_015.jpg)
+   ![image](https://raw.gitmirror.com/lqingjin/zuopinji/main/img/0820_files/Image_015.jpg)
 
 &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;（带动气氛参考）
 
@@ -319,7 +319,7 @@
 
 产品发布会预热倒计时海报的主要目的是引起外界观众的关注兴趣。因此海报内容可用描述即将发布新产品的特点文案搭配蒙着布的新产品图案轮廓， 引起受众的疑惑。
 
-![image](../img/0820_files/Image_016.jpg)
+![image](https://raw.gitmirror.com/lqingjin/zuopinji/main/img/0820_files/Image_016.jpg)
 
 &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;（产品发布会倒计时海报参考）
 
@@ -361,11 +361,11 @@
 
 提前一至两周时间， 向嘉宾发布正式版邀请函（ 邮件）， 以及电子邀请函， 以示尊重。
 
-![image](../img/0820_files/Image_017.jpg)
+![image](https://raw.gitmirror.com/lqingjin/zuopinji/main/img/0820_files/Image_017.jpg)
 
 &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;（正式版邀请函参考）
 
-![image](../img/0820_files/Image_018.jpg)
+![image](https://raw.gitmirror.com/lqingjin/zuopinji/main/img/0820_files/Image_018.jpg)
 
 &emsp;&emsp;&emsp;（电子版邀请函参考）
 
@@ -387,7 +387,7 @@
 
 具体的物料设计规格、数量、材质、报价等详细内容， 待方案确定后， 再提供相关物料设计方案与制作表。
 
-![image](../img/0820_files/Image_019.jpg)
+![image](https://raw.gitmirror.com/lqingjin/zuopinji/main/img/0820_files/Image_019.jpg)
 
   
 
