--- a/md/短视频.md
+++ b/md/短视频.md
@@ -14,5 +14,5 @@
 
 <div style="display: flex;">
   <video src="video/m1.mp4" width="320" height="240" controls></video>
-  <video src="video/m2.mp4" width="320" height="240" controls poster="../img/m2.jpg"></video>
+  <video src="video/m2.mp4" width="320" height="240" controls poster="https://raw.gitmirror.com/lqingjin/zuopinji/main/img/m2.jpg"></video>
 </div>
