--- a/md/详情页.md
+++ b/md/详情页.md
@@ -3,9 +3,9 @@
 + <a href="../file/5168.xlsx">下载源文件-></a>
 
 <div style="display: flex;">
-  <img src="../img/xq1.jpg" width="33%"></img>
-  <img src="../img/xq2.jpg" width="33%"></img>
-  <img src="../img/xq3.jpg" width="33%"></img>
+  <img src="https://raw.gitmirror.com/lqingjin/zuopinji/main/img/xq1.jpg" width="33%"></img>
+  <img src="https://raw.gitmirror.com/lqingjin/zuopinji/main/img/xq2.jpg" width="33%"></img>
+  <img src="https://raw.gitmirror.com/lqingjin/zuopinji/main/img/xq3.jpg" width="33%"></img>
 </div>
 
 #### 案例二
@@ -13,6 +13,6 @@
 + <a href="../file/6010.xlsx">下载源文件-></a>
 
 <div style="display: flex;">
-  <img src="../img/xq4.jpg" width="50%"></img>
-  <img src="../img/xq5.jpg" width="50%"></img>
+  <img src="https://raw.gitmirror.com/lqingjin/zuopinji/main/img/xq4.jpg" width="50%"></img>
+  <img src="https://raw.gitmirror.com/lqingjin/zuopinji/main/img/xq5.jpg" width="50%"></img>
 </div>
