更改图片链接

--- a/md/详情页.md
+++ b/md/详情页.md
@@ -3,9 +3,9 @@
 + <a href="../file/5168.xlsx">下载源文件-></a>
 
 <div style="display: flex;">
-  <img src="https://raw.gitmirror.com/lqingjin/zuopinji/main/img/xq1.jpg" width="33%"></img>
-  <img src="https://raw.gitmirror.com/lqingjin/zuopinji/main/img/xq2.jpg" width="33%"></img>
-  <img src="https://raw.gitmirror.com/lqingjin/zuopinji/main/img/xq3.jpg" width="33%"></img>
+  <img src="https://img01-xusong.91q.com/2AE3528D-E2D1-4DFD-BDF2-921A1415C86C.jpg" width="33%"></img>
+  <img src="https://img01-xusong.91q.com/D4786F3A-3BC7-4645-9292-83BC3E168012.jpg" width="33%"></img>
+  <img src="https://img01-xusong.91q.com/B3E7A36F-0771-4314-B631-D464218FB0C3.jpg" width="33%"></img>
 </div>
 
 #### 案例二
@@ -13,6 +13,6 @@
 + <a href="../file/6010.xlsx">下载源文件-></a>
 
 <div style="display: flex;">
-  <img src="https://raw.gitmirror.com/lqingjin/zuopinji/main/img/xq4.jpg" width="50%"></img>
-  <img src="https://raw.gitmirror.com/lqingjin/zuopinji/main/img/xq5.jpg" width="50%"></img>
+  <img src="https://img01-xusong.91q.com/7F9296CA-D115-4BBC-B82F-18ACD686C19C.jpg" width="50%"></img>
+  <img src="https://img01-xusong.91q.com/B7A421A0-9219-480B-9E24-7D8887CBF297.jpg" width="50%"></img>
 </div>
