回滚图片链接

--- a/md/店铺活动.md
+++ b/md/店铺活动.md
@@ -5,16 +5,16 @@
 #### 活动板块
 
 <div style="display: flex;">
-  <img src="https://img01-xusong.91q.com/2D9DEE3C-96AB-48B8-8F9A-304A498FB18D.jpg" width="50%"></img>
-  <img src="https://img01-xusong.91q.com/BEB4AD0E-D794-44BA-90F3-08842DDC2B8F.jpg" width="50%"></img>
+  <img src="https://raw.gitmirror.com/lqingjin/zuopinji/main/img/sy1.jpg" width="50%"></img>
+  <img src="https://raw.gitmirror.com/lqingjin/zuopinji/main/img/sy2.jpg" width="50%"></img>
 </div>
 <br>
 
 #### 日常板块
 
 <div style="display: flex;">
-  <img src="https://img01-xusong.91q.com/642B716F-EC25-4DD8-B848-4D60120459F2.jpg" height="100%" width="50%"></img>
-  <img src="https://img01-xusong.91q.com/9C3CE196-48A8-41D4-9C29-2541DAB9B487.jpg" width="50%"></img>
+  <img src="https://raw.gitmirror.com/lqingjin/zuopinji/main/img/xc1.jpg" width="50%"></img>
+  <img src="https://raw.gitmirror.com/lqingjin/zuopinji/main/img/xc2.jpg" width="50%"></img>
 </div>
 <br>
 
@@ -29,22 +29,21 @@
 #### 品牌宣传板块
 
 <div style="display: flex;">
-  <img src="https://img01-xusong.91q.com/958AD7CC-4366-4922-AD8F-205E1D04936F.jpg" width="50%"></img>
-  <img src="https://img01-xusong.91q.com/73D37956-6013-4CCA-828E-73DE274B25F2.jpg" width="50%"></img>
+   <img src="https://raw.gitmirror.com/lqingjin/zuopinji/main/img/xc1.jpg" width="50%"></img>
+  <img src="https://raw.gitmirror.com/lqingjin/zuopinji/main/img/xc2.jpg" width="50%"></img>
 </div>
 
 #### PC端店铺首页
 
- <img src="https://img01-xusong.91q.com/37A48305-26FC-4293-A926-2FB34807909D.jpg
-" width="100%"></img>
+ <img src="https://raw.gitmirror.com/lqingjin/zuopinji/main/img/pc.jpg" width="100%"></img>
 
 ## 关联页
 
 关联页放置于详情页之前，页面内容主要放店铺活动策略，以及主推爆款，便于买家打开详情页后直接了解，降低客户跳失率。
 
 <div style="display: flex;">
-  <img src="https://img01-xusong.91q.com/358C5785-7D22-438B-B498-7BF50567C70B.jpg" width="50%"></img>
-  <img src="https://img01-xusong.91q.com/8D936262-7D9A-45D8-80A4-C325E322A286.jpg" width="50%"></img>
+  <img src="https://raw.gitmirror.com/lqingjin/zuopinji/main/img/gl1.jpg" width="50%"></img>
+  <img src="https://raw.gitmirror.com/lqingjin/zuopinji/main/img/gl2.jpg" width="50%"></img>
 </div>
 
 ## 活动主图
@@ -52,7 +51,7 @@
 主图是非常重要的一环，直接影响点击率、和转化率。主图的利益点通常要分层次，即较大的利益点放大突出显示，文案要精简易懂，有张力。
 
 <div style="display: flex;">
-  <img src="https://img01-xusong.91q.com/1E73B0E1-D972-4BA7-9DB8-7C25FD4258F4.jpg" width="30%"></img>
-  <img src="https://img01-xusong.91q.com/812FC1A0-1A40-40CB-99E4-1A9F9B9FC062.jpg" width="35%"></img>
-  <img src="https://img01-xusong.91q.com/65231BE6-5C1E-45C0-A450-F9DCE4196172.jpg" width="30%"></img>
+  <img src="https://raw.gitmirror.com/lqingjin/zuopinji/main/img/zt1.jpg" width="30%"></img>
+  <img src="https://raw.gitmirror.com/lqingjin/zuopinji/main/img/zt2.jpg" width="35%"></img>
+  <img src="https://raw.gitmirror.com/lqingjin/zuopinji/main/img/zt3.jpg" width="30%"></img>
 </div>
