更新下载文件

--- a/md/详情页.md
+++ b/md/详情页.md
@@ -1,6 +1,6 @@
 #### 案例一
 
-+ <a href="../file/5168.xlsx">下载源文件-></a>
++ <a href="https://raw.githubusercontent.com/lqingjin/zuopinji/main/file/5168.xlsx">下载源文件-></a>
 
 <div style="display: flex;">
   <img src="https://raw.gitmirror.com/lqingjin/zuopinji/main/img/xq1.jpg" width="33%"></img>
@@ -10,7 +10,7 @@
 
 #### 案例二
 
-+ <a href="../file/6010.xlsx">下载源文件-></a>
++ <a href="https://raw.githubusercontent.com/lqingjin/zuopinji/main/file/6010.xlsx">下载源文件-></a>
 
 <div style="display: flex;">
   <img src="https://raw.gitmirror.com/lqingjin/zuopinji/main/img/xq4.jpg" width="50%"></img>
